added two tests